Created more tests, now coverage should be more than 70%